--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "modern-normalize": "^3.0.1",
+    "nanoid": "^5.1.5",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
